server/k8s-agones/3_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: board-server
  name: board-server
  namespace: board
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    agones.dev/role: gameserver
  type: NodePort
